# market-mitra

./: .gitignore  README.md  alembic.ini  dashbaord-image-builder.yaml  dev-setup.yaml  dev-worker.yaml  init-multiple-dbs.sql  local-setup.yaml  main.py  pricedata.csv  pyproject.toml  script.py  traefik.yaml
alembic/: env.py
alembic/versions/: 4bbafa7dfa74_create_the_company_table.py  683685417d5e_generate_pricing_table.py  7ebaa11b7e8a_create_companies_table.py  82b264f65df1_changing_the_volume_to_bigint.py  991440c34f0b_create_company_table.py  beb1e64e84bd_added_last_update_column_in_company_.py
authelia/: configuration.yml  users.yml
dashboard/: .dockerignore  Dockerfile  package-lock.json  package.json
dashboard/src/app/: layout.tsx  (+1 more)
deployments/: initial_load_deploy.py  load_daily_pricing_data.py  load_single_asset_data.py  regular_cleanup.py  update_risk_return_view.py  update_view.py
docs/: ref-data.md
jobs/: initial_load.py  intial_load.py  script.py  update_view.py
jobs/cleanup/: prefect_db_cleanup.py
jobs/dynamic_infra/: client.py
jobs/models/: __init__.py  company.py  price.py
jobs/pricing/: load_all_daily_pricing.py  update_risk_return_view.py
middlewares/api-key-validator/: Dockerfile  main.py
models/: __init__.py  company.py
ref-data/companies/: ind_nifty50_list.csv  ind_niftymidcap150_list.csv  ind_niftynext50_list.csv  ind_niftysmallcap250_list.csv
sql/materialized_views/: risk_return_view.sql
traefik/dynamic/: dashboard.yml  middlewares.yml  routers.yml
treafik/dynamic/: routers.yml
worker_base_img/: Dockerfile
(+7 files in other folders)
