[project]
name = "market-mitra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "pandas>=2.3.2",
    "prefect>=3.4.19",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.43",
]
