[project]
name = "market-mitra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "dotenv>=0.9.9",
    "pandas>=2.3.2",
    "paramiko>=4.0.0",
    "prefect>=3.4.19",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "sqlalchemy>=2.0.43",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = []
